// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventDataSection renders formatted 1`] = `
<div
  className=" box"
>
  <div
    className="box-header"
    id="extra"
  >
    <a
      className="permalink"
      href="#extra"
    >
      <em
        className="icon-anchor"
      />
    </a>
    <h3>
      Additional Data
    </h3>
    <div
      className="btn-group pull-right"
    >
      <a
        className="active btn btn-default btn-sm"
        onClick={[Function]}
      >
        Formatted
      </a>
      <a
        className=" btn btn-default btn-sm"
        onClick={[Function]}
      >
        Raw
      </a>
    </div>
  </div>
  <div
    className="box-content with-padding"
  />
</div>
`;

exports[`EventDataSection renders raw 1`] = `
<div
  className=" box"
>
  <div
    className="box-header"
    id="extra"
  >
    <a
      className="permalink"
      href="#extra"
    >
      <em
        className="icon-anchor"
      />
    </a>
    <h3>
      Additional Data
    </h3>
    <div
      className="btn-group pull-right"
    >
      <a
        className=" btn btn-default btn-sm"
        onClick={[Function]}
      >
        Formatted
      </a>
      <a
        className="active btn btn-default btn-sm"
        onClick={[Function]}
      >
        Raw
      </a>
    </div>
  </div>
  <div
    className="box-content with-padding"
  />
</div>
`;

exports[`KeyValueList renders formatted 1`] = `
<table
  className="table key-value"
>
  <tbody>
    <tr
      key="andthis"
    >
      <td
        className="key"
      >
        andthis
      </td>
      <td
        className="value"
      >
        <ContextData
          data={0}
        />
      </td>
    </tr>
    <tr
      key="plussomeotherstuff"
    >
      <td
        className="key"
      >
        plussomeotherstuff
      </td>
      <td
        className="value"
      >
        <ContextData
          data="here"
        />
      </td>
    </tr>
    <tr
      key="somestuff"
    >
      <td
        className="key"
      >
        somestuff
      </td>
      <td
        className="value"
      >
        <ContextData
          data={
            Object {
              "andsomeotherstuff": "here",
            }
          }
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`KeyValueList renders raw 1`] = `
<table
  className="table key-value"
>
  <tbody>
    <tr
      key="andthis"
    >
      <td
        className="key"
      >
        andthis
      </td>
      <td
        className="value"
      >
        <ContextData
          data="0"
        />
      </td>
    </tr>
    <tr
      key="plussomeotherstuff"
    >
      <td
        className="key"
      >
        plussomeotherstuff
      </td>
      <td
        className="value"
      >
        <ContextData
          data="\\"here\\""
        />
      </td>
    </tr>
    <tr
      key="somestuff"
    >
      <td
        className="key"
      >
        somestuff
      </td>
      <td
        className="value"
      >
        <ContextData
          data="{\\"andsomeotherstuff\\":\\"here\\"}"
        />
      </td>
    </tr>
  </tbody>
</table>
`;
